# equack-core

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN-serve-command.md  README.md  REVISION-TRACKER.md  audit.jsonl  badsig.cbor  equack-revision-plan.md  evaluation.tex  figure3.md  flake.nix  folderStructure.md  gatewayWalkthrough.md  good.cbor  gptpro-writing-context.md  gptproinstructions.md  material.md  ops.cbor  orphan.cbor  prompt.md  sanity.sh  techstack-diagram.tex  vc.jwt
.audit/: index.json
.audit-e3/: index.json
.audit-e4/: index.json
.audit-merge/: index.json
.cargo/: config.toml
.claude/: settings.local.json
.conf-conf.db/: 000024.sst  000025.sst  000026.sst  000027.sst  000028.sst  000033.sst  000034.sst  000035.sst  000040.sst  000041.sst  000042.sst  000047.sst  000048.sst  000049.sst  000056.sst  000057.sst  000058.sst  000065.sst  000066.sst  000067.sst  000074.sst  000075.sst  000076.sst  000081.sst  000082.sst  000083.sst  000088.sst  000089.sst  000090.sst  000097.sst  000098.sst  000099.sst  000106.sst  000107.sst  000108.sst  000113.sst  000114.sst  000115.sst  000122.sst  000123.sst  (+370 more)
.conf-plain.db/: 000024.sst  000025.sst  000026.sst  000027.sst  000032.sst  000033.sst  000034.sst  000039.sst  000040.sst  000041.sst  000046.sst  000047.sst  000048.sst  000055.sst  000056.sst  000057.sst  000064.sst  000065.sst  000066.sst  000071.sst  000072.sst  000073.sst  000078.sst  000079.sst  000080.sst  000085.sst  000086.sst  000087.sst  000094.sst  000095.sst  000096.sst  000103.sst  000104.sst  000105.sst  000112.sst  000113.sst  000114.sst  000121.sst  000122.sst  000123.sst  (+364 more)
.conf-rot/: 000024.sst  000025.sst  000026.sst  000027.sst  000028.sst  000033.sst  000034.sst  000035.sst  000036.sst  000041.sst  000042.sst  000043.sst  000044.sst  000049.sst  000050.sst  000051.sst  000052.sst  000059.sst  000060.sst  000061.sst  000062.sst  000069.sst  000070.sst  000071.sst  000078.sst  000079.sst  000080.sst  000085.sst  000086.sst  000087.sst  000094.sst  000095.sst  000096.sst  000103.sst  000104.sst  000105.sst  000112.sst  000113.sst  000114.sst  000121.sst  (+389 more)
.ecac-e3.db/: 000024.sst  000025.sst  000026.sst  000027.sst  IDENTITY  LOG  LOG.old.1766340531978753  MANIFEST-000029
.ecac-e4.db/: 000024.sst  000025.sst  000026.sst  000027.sst  IDENTITY  LOG  LOG.old.1766334725007035  LOG.old.1766334731251475  MANIFEST-000033
.ecac-merge.db/: 000024.sst  000025.sst  000026.sst  000027.sst  IDENTITY  LOG  LOG.old.1766336563297555  LOG.old.1766336568010030  MANIFEST-000033
.ecac.db/: 000022.sst  000024.sst  000025.sst  000026.sst  000027.sst  000028.sst  000033.sst  000034.sst  000035.sst  000036.sst  000085.sst  000086.sst  000087.sst  000120.sst  IDENTITY  LOG  LOG.old.1761645243987464  LOG.old.1761645252902259  LOG.old.1761645263155746  LOG.old.1761645270651669  LOG.old.1761645278019511  LOG.old.1761645710729701  LOG.old.1761645724041476  LOG.old.1761645732658471  LOG.old.1761646479180884  LOG.old.1761646491270440  LOG.old.1761646499181967  LOG.old.1761649932315934  LOG.old.1761649946262274  LOG.old.1761649955575847  LOG.old.1761661955791698  LOG.old.1761662053898593  LOG.old.1761662066852944  LOG.old.1761732089823115  LOG.old.1761732089973225  LOG.old.1761732090161817  LOG.old.1761732099314469  LOG.old.1761734772710673  LOG.old.1764059460702483  LOG.old.1764059472068539  (+18 more)
.ecac.m10.db/: 000024.sst  000025.sst  000026.sst  000027.sst  IDENTITY  LOG  LOG.old.1764772428740354  MANIFEST-000029
.m8test.db/: IDENTITY  LOG  MANIFEST-000005
EQuack_13_Pages_With_Bibliography/: REVISION-TRACKER.md  ecac.tex
EQuack__Eventually_Consistent_Access_Control_through_Deterministic_Replay/: ecac.bbl  ecac.bib  ecac.blg  ecac.fdb_latexmk  ecac.fls  ecac.tex
Eventually_Consistent_Access_Control_with_Deterministic_Deny_Wins_Replay_for_Multi_Stakeholder_Offline_Systems/: e3-policy.cbor  e4-policy.cbor  ecac-architecture.tex  ecac.aux  ecac.bbl  ecac.bib  ecac.blg  ecac.fdb_latexmk  ecac.fls  ecac.out  ecac.tex  ecac.tex.backup-pre-shortening  fig-confidentiality.tex  fig-dag-structure.tex  fig-deny-wins.tex  fig-overview.tex  fig-replay-checkpoint.tex  fig-trustview-vc.tex  partition-A.cbor  partition-B.cbor
crates/cli/: Cargo.toml  commands.md
crates/cli/examples/: audit_init.rs  audit_verify.rs  make_fixtures.rs  make_jwt.rs  make_jwt_subject.rs  make_write.rs  vc_replay.rs
crates/cli/src/: bench.rs  commands.rs  main.rs  simulate.rs
crates/cli/src/server/: api.rs  mod.rs  state.rs  static_files.rs
crates/cli/tests/: e2e.rs  metrics_header.rs  replay_parity.rs
crates/core/: Cargo.toml
crates/core/examples/: dump_ops.rs  m1_smoke.rs  m2_replay.rs  simulate_policy.rs
crates/core/src/: audit.rs  audit_hook.rs  crypto.rs  dag.rs  hlc.rs  lib.rs  metrics.rs  op.rs  policy.rs  replay.rs  serialize.rs  state.rs  status.rs  trust.rs  trustview.rs  vc.rs
crates/core/src/crdt/: mod.rs  mvreg.rs  orset.rs
crates/core/tests/: count_e3_ops.rs  cross_platform_determinism.rs  epoch_pos_time.rs  m9_read_control.rs  mvreg_tests.rs  orset_tests.rs  policy_tests.rs  replay_policy_prop.rs  replay_policy_split.rs  replay_prop.rs  replay_split_prop.rs  revision_props.proptest-regressions  revision_props.rs  topo_prop.rs  util.rs  vc_policy_tests.rs
crates/net/: Cargo.toml
crates/net/src/: gossip.rs  lib.rs  rpc.rs  serializer.rs  sync.rs  transport.rs  types.rs
crates/net/tests/: anti_entropy.rs  common.rs  duplicate_storm.rs  sync_planner.rs  two_node_sync_minimal.rs  two_peer.rs
crates/store/: Cargo.toml  sanity.md
crates/store/src/: audit.rs  audit_sink.rs  lib.rs
crates/store/tests/: audit_chain.rs  audit_e2e.rs  audit_roundtrip.rs  heads_bloom.rs  m5_store.rs  m9_keyring_store.rs  prop_topo.rs
deploy/: docker-compose.yml  inject-partition.sh  measure-convergence.sh  run-edge-benchmark.sh  run-network-experiment.sh
docs/: architecture.md  audit.md  beforeM6m5SoFar.md  evaluation-plan.md  m10_inband_trust.md  (+4 more)
experiments/make_policy_logs/: Cargo.toml
experiments/make_policy_logs/src/: main.rs
(+154 files in other folders)
