[package]
name = "ecac-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
ecac-core = { path = "../core" }
ecac-store = { path = "../store" }
blake3 = "1"
anyhow = "1"
serde_json = "1"
ed25519-dalek = "2.2"
base64 = "0.22"

[dev-dependencies]
rand = "0.8"

[features]
audit = ["ecac-store/audit", "ecac-core/audit"]
