[package]
name = "ecac-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
blake3 = "1"
anyhow = "1"
ed25519-dalek = "2.2"
base64 = "0.22"
serde_json = "1"
ecac-core = { path = "../core", default-features = false }
ecac-store = { path = "../store", default-features = false }
rand = "0.8"

[dev-dependencies]
rand = "0.8"

[features]
default = []
audit = ["ecac-store/audit", "ecac-core/audit"]

