[package]
name = "ecac-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
blake3 = "1"
anyhow = "1"
ed25519-dalek = "2.2"
base64 = "0.22"
serde_json = "1"
ecac-core = { path = "../core", default-features = false }
ecac-store = { path = "../store", default-features = false }
ecac-net = { path = "../net", optional = true }
libp2p = { version = "0.54", optional = true }
rand = "0.8"
hex = "0.4"

# Server dependencies (optional, for serve command)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = []
audit = ["ecac-store/audit", "ecac-core/audit"]
serve = ["axum", "tokio", "tower-http", "rust-embed", "mime_guess", "ecac-net", "libp2p"]

