[package]
name = "ecac-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"        # <-- required for OsRng
rand_core = "0.6"
once_cell = "1"

[dev-dependencies]
proptest = "1"
