[package]
name = "ecac-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
once_cell = "1"
base64 = "0.22"
toml = "0.8"          # <-- add this
chacha20poly1305 = "0.10"
sha2 = "0.10.9"

[[bin]]
name = "bench_replay"
path = "src/bin/bench_replay.rs"

[[bin]]
name = "bench_memory"
path = "src/bin/bench_memory.rs"

[[bin]]
name = "bench_sync"
path = "src/bin/bench_sync.rs"

[[bin]]
name = "bench_iot_fleet"
path = "src/bin/bench_iot_fleet.rs"

[[bin]]
name = "bench_adversarial"
path = "src/bin/bench_adversarial.rs"

[[bin]]
name = "bench_profile"
path = "src/bin/bench_profile.rs"

[[bin]]
name = "bench_gate"
path = "src/bin/bench_gate.rs"

[[bin]]
name = "equack_node"
path = "src/bin/equack_node.rs"

[dev-dependencies]
proptest = "1"

[features]
audit = []
