[package]
name = "ecac-net"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
smallvec = "1"
blake3 = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["pkcs8"] }
async-trait = "0.1"
# Core types (OpId, HLC, etc.)
ecac-core = { path = "../core" }
libp2p = { version = "0.54.1", default-features = false, features = [
  "tcp", "dns", "tokio", "noise", "yamux",
  "gossipsub", "request-response", "identify", "macros"   # <- macros for #[derive(NetworkBehaviour)]
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }  # <- add sync,time

[dev-dependencies]
rand = "0.8"

