[package]

name = "ecac-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11", default-features = false } # deterministic CBOR
rocksdb = { version = "0.21", default-features = false, features = ["zstd","lz4","snappy"] }
hex = "0.4"
blake3 = "1.5"
ecac-core = { path = "../core" }
