[package]
name = "ecac-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11", default-features = false } # deterministic CBOR
serde_json = "1"
rocksdb = { version = "0.21", default-features = false, features = ["zstd","lz4","snappy"] }
hex = "0.4"
blake3 = "1.5"
ecac-core = { path = "../core" }
getrandom = "0.2"
ed25519-dalek = { version = "2.2", default-features = false }

[dev-dependencies]
# Temp directories for DBs in tests
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

# Property tests (random DAGs, etc.)
proptest = { version = "1", default-features = false, features = ["std"] }
rand = "0.8"

# Handy test utilities
hex-literal = "0.4"
pretty_assertions = "1"
serde_json = "1"

[features]
default = []
prop-topo = []
audit = ["ecac-core/audit"]