[workspace]
members = ["."]
resolver = "2"

[package]
name = "make_policy_logs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
ecac-core = { path = "../../crates/core" }
serde_cbor = "0.11"
serde_json = "1.0"
blake3 = "1.0"
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2.0"
